--- a/workspace/html/ejercicio1/inicial.html
+++ b/workspace/html/ejercicio1/inicial.html
@@ -97,4 +97,8 @@
             <div>Seccion3 </div>    
         </fieldset>    
     </body> <!-- para mostrar contenido en la pagina -->
+    <!-- display block, deplaza hacia abajo-->
+        <!-- display inline, deplaza hacia la derecha-->
+        <!-- p, h1 a h6, div, form, header, footer, section son BLOQUES -->
+        <!-- span, a (link), img, son INLINE -->
 </html>
