--- a/workspace/html/index.html
+++ b/workspace/html/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>  <!-- una buena practica es cargar siempre en CSS en el head para que sea de lo primero que carga -->
-        <title>CSS</title> <!-- CSS unicamente vive en funcion a un HTML -->
+    <head>  
+        <title>CSS</title> 
         <link rel="stylesheet" href="main.css" type="text/css"/>
     </head>
     <body>
-      <div class="caja"> 
-        <div class="header">Soy cabecera</div>
-        <div class="contenido"> Esta es mi primer practica de CSS!</div>
-        <div class="footer">
-            <button class="primario">Aceptar</button>
-            <button class="secundario">Cancelar</button>
-        </div>
-      </div>
+        <p>Lalala</p>
+        <div>
+            <img src="http://placekitten.com/200/200"/>
+            <p>Donde vamos a indicar un texto mas largo 
+             de lo normal para que podamos ver como actua 
+             la propiedad de float</p>
+        </div>      
     </body>
 </html>
