--- a/workspace/html-css/CSSavanzado/index.html
+++ b/workspace/html-css/CSSavanzado/index.html
@@ -5,12 +5,9 @@
         <link rel="stylesheet" href="main.css" type="text/css"/>
     </head>
     <body>  
-        <div class="fondo">
-            <p>Lala</p>
-            <p>Lele</p>
-            <p>Lili</p>
-            <p>Lolo</p>
-            <p>Pepe</p>
+        <div class="box">
+            <p>Soy una caja</p>
         </div>  
+        <p class="text">Hola Mundo</p>
     </body>
 </html>
